// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - UI actions Should close the dashboard 1`] = `
Object {
  "payload": Object {
    "open": false,
  },
  "type": "@@MT/EVENTS/SET_DASHBOARD_DATE_TIME",
}
`;

exports[`[STORE] - UI actions Should close the dashboard 2`] = `
Object {
  "payload": Object {
    "open": false,
  },
  "type": "@@MT/EVENTS/SET_DASHBOARD_PRICE",
}
`;

exports[`[STORE] - UI actions Should open the dashboard 1`] = `
Object {
  "payload": Object {
    "open": true,
  },
  "type": "@@MT/EVENTS/SET_DASHBOARD_DATE_TIME",
}
`;

exports[`[STORE] - UI actions Should open the dashboard 2`] = `
Object {
  "payload": Object {
    "open": true,
  },
  "type": "@@MT/EVENTS/SET_DASHBOARD_PRICE",
}
`;

exports[`[STORE] - UI actions Should set the visible month 1`] = `
Object {
  "payload": Object {
    "visibleMonth": "2018-07-01T05:00:00.000Z",
  },
  "type": "@@MT/EVENTS/SET_VISIBLE_MONTH",
}
`;

exports[`[STORE] - UI actions Should toggle the dashboard 1`] = `
Object {
  "type": "@@MT/EVENTS/TOGGLE_DASHBOARD_DATE_TIME",
}
`;

exports[`[STORE] - UI thunk actions Should set the initial state 1`] = `
Array [
  Object {
    "payload": Object {
      "visibleMonth": 2018-07-01T00:00:00.000Z,
    },
    "type": "@@MT/EVENTS/SET_VISIBLE_MONTH",
  },
]
`;
